--- a/package.json
+++ b/package.json
@@ -17,21 +17,24 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "i18n-js": "^4.3.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-device-info": "^10.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-flags": "^1.0.0",
-    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-modal-selector": "^2.1.2",
     "react-native-reanimated": "^3.5.1",
+    "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-xml2js": "^1.0.3",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
