--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/messaging": "^18.4.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/compat": "^5.3.20",
     "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/elements": "^1.3.18",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
@@ -37,10 +40,13 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal-selector": "^2.1.2",
+    "react-native-pager-view": "^6.2.1",
     "react-native-reanimated": "^3.5.1",
     "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-webview": "^13.6.0",
     "react-native-xml2js": "^1.0.3",
