--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-material-menu": "^2.0.0",
     "react-native-modal-selector": "^2.1.2",
     "react-native-pager-view": "^6.2.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.5.1",
     "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "^4.7.2",
