--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=tsi.keystore
+MYAPP_UPLOAD_KEY_ALIAS=release
+MYAPP_UPLOAD_STORE_PASSWORD=tsi8907
+MYAPP_UPLOAD_KEY_PASSWORD=tsi8907
